--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <div class="container">
       <div class="section-heading text-center">
         <h2>Unlimited Features, Unlimited Fun</h2>
-        <p class="text-muted">Check out what you can do with this app theme!</p>
+        <p class="text-muted">Check out what you can do with this!</p>
         <hr>
       </div>
       <div class="row">
