--- a/index.html
+++ b/index.html
@@ -96,11 +96,31 @@
     </header>
     <section class="download bg-primary text-center" id="download">
         <div class="container">
-            <div class="row">
+            <!--<div class="row">
                 <div class="col-md-8 mx-auto">
                     <h4 class="section-heading mb-4"> 'Misfits takes simple geometry and translates it into an absorbing game that is both beautiful to look at and fun to play.’</h4>
                     <h6>Anthony Burrill <a style="color:black;" target="_blank" href="https://www.instagram.com/anthonyburrill/">(@anthonyburill),</a> graphic artist</h6>
-                </div>
+                </div> -->
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src=".../800x400?auto=yes&bg=777&fg=555&text=First slide" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <h4 class="section-heading mb-4"> 'Misfits takes simple geometry and translates it into an absorbing game that is both beautiful to look at and fun to play.’</h4>
+                    <h6>Anthony Burrill <a style="color:black;" target="_blank" href="https://www.instagram.com/anthonyburrill/">(@anthonyburill),</a> graphic artist</h6>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src=".../800x400?auto=yes&bg=555&fg=333&text=Third slide" alt="Third slide">
+    </div>
+  </div>
+</div>
+
             </div>
         </div>
     </section>
