fixed up slider with dots, now trying to fit with the text.

--- a/index.html
+++ b/index.html
@@ -214,18 +214,19 @@
          </section>-->
       <section class="bg-grey container-fluid">
          <div class="row">
-            <div class="col-lg-4">
-               <div id="designGalleryStart" class="header-content-green col col-sm-12 order-1">
+            <div id="designGallery" class="col-lg-4">
+               <div id="design-text" class="header-content-green col col-sm-12">
+                  <h1 class="green-header" style="line-height:0.6;">Easy pickings.</h1>
+                  <h5 class="subhead-smaller"> Open up the tray from the slipcase to reveal the blocks delightfully organized in a puzzle-like pattern. This ensures every block is safely transported without the need for excess plastic or paper packaging. And, once you’ve finished the game, there’s a line design at the bottom of the inner tray to show you where the blocks return. No more lost game pieces. It is simply a remarkable and reassuring experience, from the first block to the last. </h5> </div>
+               <div id="design-text" class="header-content-green col col-sm-12">c</div>
+               <div id="design-text" class="header-content-green col col-sm-12">d</div>
+               <div id="designGalleryIntro" class="header-content-green col col-sm-12">
                   <div class="splash-logo"></div>
                   <h1 style="margin-top:10px; line-height:0.7;">Try to find a more gorgeous game. </h1>
                   <h1 class="green-header" style="line-height:0.6;">We’ll wait.</h1>
                   <h5 class="subhead-smaller"> We spent over three years in development to ensure that Misfits was as gorgeous and immersive from the first time you play, to the last round. 
-      From the beautifully arranged, forty American beech <i>(Fagus grandifolia)</i> wood blocks to the elegant slip-and-drawer design. Every part of Misfits combines beautiful engineering and a designer's love for meticulous craft. 
-      </h5> </div>
-               <div id="designFeatureOne" class="is-hidden header-content-green col col-sm-12 order-1">
-                  <h1 class="green-header" style="line-height:0.6;">Easy pickings.</h1>
-                  <h5 class="subhead-smaller"> Open up the tray from the slipcase to reveal the blocks delightfully organized in a puzzle-like pattern. This ensures every block is safely transported without the need for excess plastic or paper packaging. And, once you’ve finished the game, there’s a line design at the bottom of the inner tray to show you where the blocks return. No more lost game pieces. It is simply a remarkable and reassuring experience, from the first block to the last. 
-      </h5> </div>
+                  From the beautifully arranged, forty American beech <i>(Fagus grandifolia)</i> wood blocks to the elegant slip-and-drawer design. Every part of Misfits combines beautiful engineering and a designer's love for meticulous craft. 
+               </h5> </div>
                <button id="passionforDesign" style="margin-left: 50px" class="subhead">See the hidden design details of Misfits. </button>
             </div>
             <div class="col-lg-8"id="slider">
@@ -235,10 +236,17 @@
                   <div class="slide"><img src="img/c_Misfits_30082019_Shot_10_802.jpg" style="width:100%"></div>
                </div>
                <div class="arrows">
-                  <a class="prev">
+                  <a class="sliderPrev">
                      <svg xmlns="http://www.w3.org/2000/svg" width="40px" viewBox="0 0 408.27 456.28"><defs><funciri></defs><title>sliderArrow</title><g class="a"><path class="sliderArrow" d="M54.81,441.62C53.24,331.1,23.89,373.38,98.6,303.16c83.39-65,100.15-65.58,202-84.85-128.13-150.85-205.3-84.46-223-116C19.33,123.39,29.16,48.76,27,34.43,58,29,119.7,38.64,163.43,52.67,234.3,90.59,337.88,131.8,365.86,199.46c6,139.34-88.42,81.74-136.52,114.88C162.68,342.09,130.78,366.26,54.81,441.62Z"/></g></svg>
-                  </a> <a class="next"></a> </div>
-               <div class="pager"> 1 / 4 </div>
+                  </a>
+                  <a class="sliderNext"><svg xmlns="http://www.w3.org/2000/svg" width="40px" viewBox="0 0 408.27 456.28"><defs><funciri></defs><title>sliderArrow</title><g class="a"><path class="sliderArrow" d="M54.81,441.62C53.24,331.1,23.89,373.38,98.6,303.16c83.39-65,100.15-65.58,202-84.85-128.13-150.85-205.3-84.46-223-116C19.33,123.39,29.16,48.76,27,34.43,58,29,119.7,38.64,163.43,52.67,234.3,90.59,337.88,131.8,365.86,199.46c6,139.34-88.42,81.74-136.52,114.88C162.68,342.09,130.78,366.26,54.81,441.62Z"/></g></svg></a>
+                  </div>
+               
+               <div class="sliderDotDiv">
+                  <div id="sliderDot" class="dot1 active"></div> 
+                  <div id="sliderDot" class="dot2"></div> 
+                  <div id="sliderDot" class="dot3"></div> 
+               </div>
             </div>
          </div>
       </section>
