looking better, still need adjust arrows and responsiveness. Slider dots too

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       <section class="manifesto bg-pink text-left" id="manifesto">
          <div class="container"> <a href="javascript:" id="return-to-top">I work for Hasbro get me out of here</a>
             <div class="manifesto-header col-lg-12 green-header">
-               <h1 style=" <img style="width:1em;" src="img/logoicons_green.svg">&nbsp;builds on the legacy of stacking games. And yet, it’s a radical rethink of a stacking game can be. </h1> </div>
+               <h1><img style="width:1em;" src="img/logoicons_green.svg">&nbsp;builds on the legacy of stacking games. And yet, it’s a radical rethink of a stacking game can be.</h1></div>
             <div class="manifesto-text">
                <div class="row col-lg-12">
                   <h4 style="margin-top:60px;">We believe play can be enjoyed by all. It’s not just for the kids. Or the game connoisseurs. We threw the manual into the bin.</h4></div>
@@ -212,7 +212,7 @@
          </div>
          </div>
          </section>-->
-      <section class="bg-grey container-fluid">
+      <section class="bg-grey design-slider container-fluid">
          <div class="row">
             <!--<div class="col-lg-4">
                <div id="designGalleryIntro" class="header-content-green col col-sm-12">
@@ -231,8 +231,10 @@
             <div class="slides-container container-fluid">
                   <div class="slide">
                   <div class="slider-text">
-                     <h1 class="green-header" style="line-height:0.6;">Easy pickings.</h1>
-                  <h5 class="subhead-smaller"> Open up the tray from the slipcase to reveal the blocks delightfully organized in a puzzle-like pattern. This ensures every block is safely transported without the need for excess plastic or paper packaging. And, once you’ve finished the game, there’s a line design at the bottom of the inner tray to show you where the blocks return. No more lost game pieces. It is simply a remarkable and reassuring experience, from the first block to the last. </h5>
+                     <h1 style="margin-top:10px; line-height:0.7;">Try to find a more gorgeous game. </h1>
+                  <h1 class="green-header" style="line-height:0.6;">We’ll wait.</h1>
+                  <h5 class="subhead-smaller"> We spent over three years in development to ensure that Misfits was as gorgeous and immersive from the first time you play, to the last round. 
+                  From the beautifully arranged, forty American beech <i>(Fagus grandifolia)</i> wood blocks to the elegant slip-and-drawer design. Every part of Misfits combines beautiful engineering and a designer's love for meticulous craft.</h5>
                   </div>
                   <div class="slider-img image-3"></div>
                </div>
