new images (with darker bags), some other styling. slowly getting more pro

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       <section class="manifesto bg-pink" id="manifesto">
          <div class="scroll_to_top_button"><a>I work for Hasbro get me out of here</a></div>
             <div class="manifesto-header col-lg-8 mx-auto">
-               <h1><img style="width:1em;" src="img/logoicons_green.svg">&nbsp;builds on the legacy of stacking games. And yet, it’s a radical rethink of a stacking game can be.</h1>
+               <h1><img style="width:1em;" src="img/logoicons_green.svg">&nbsp;builds on the legacy of stacking games. And yet, it’s a radical rethink of what a stacking game can be.</h1>
                <img src="img/tom_line-01.svg">
 
             </div>
@@ -175,32 +175,26 @@
       </h5> </div>
            
          </div>
-            <div class="row mx-auto">
+      </section>
+      <section class="introducing bg-pink" id="manifesto-welcome">
+            <div class="manifesto-end col-sm-12 col-lg-8 mx-auto">
                <h5 class="mb-6">
-      Say hello to <strong>MISFITS</strong>.
+      Introducing <strong>MISFITS</strong>.
       </h5> </div>
-      </div>
-         </div>
-         <svg id="HELOOOOO" data-name="HELOOOOO" viewBox="0 0 1230 484" version="1.1">
+      <svg id="HELOOOOO" data-name="HELOOOOO" viewBox="0 0 1230 484" version="1.1">
             <title>Round up middle</title>
             <defs></defs>
-            <g id="Post-Festival-Homepage" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-               <g transform="translate(0.000000, -1717.000000)" id="BG-Shapes" fill="#dadad2">
+            <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+               <g transform="translate(0.000000, -1717.000000)" class="bg-blue">
                   <g transform="translate(-210.000000, 0.000000)">
                      <polygon id="Yellow-Scrap-Copy" transform="translate(720.000000, 1958.996094) rotate(180.000000) translate(-720.000000, -1958.996094) " points="-3.41060513e-12 1842.99219 6.82121026e-13 1717 1440 1717 1408.04343 1745.60521 1045.29818 1959.25481 684.27907 2075.9568 364 2200.99219 310 2100.99219 170 1936.99219"></polygon>
                   </g>
                </g>
             </g>
          </svg>
-      </section>
-      <section class="introducing bg-grey" id="manifesto-welcome">
-            <div class="manifesto-end col-sm-12 col-lg-8 mx-auto">
-               <h5 class="mb-6">
-      Introducing <strong>MISFITS</strong>.
-      </h5> </div>
    </section>
       <!-- You can hook the "home button" to some JavaScript events or just remove it -->
-      <section class="bg-grey">
+      <section class="design-triptych bg-blue">
          <div class="features container-fluid">
             <div class="row">
                <div class="col-lg-4">
@@ -225,7 +219,7 @@
          </div>
          </div>
          </section>-->
-      <section class="bg-grey design-slider container-fluid">
+      <section class="bg-blue design-slider container-fluid">
          <div class="row">
             <!--<div class="col-lg-4">
                <div id="designGalleryIntro" class="header-content-green col col-sm-12">
@@ -249,8 +243,8 @@
                </div>
                   <div id="s1" class="slide ">
                   <div class="slider-text">
-                     <h1 style="margin-top:10px; line-height:0.7;">Try to find a more gorgeous game. </h1>
-                  <h1 class="green-header" style="line-height:0.6;">We’ll wait.</h1>
+                     <h1 style="margin-top:10px; line-height:0.9;">A thing of beauty is <br> fun forever.</h1>
+
                   <h5 class="subhead-smaller"> From the beautifully arranged, forty American beech <i>(Fagus grandifolia)</i> wood blocks to the elegant slip-and-drawer design. Every part of Misfits combines beautiful engineering and a designer's love for meticulous craft.</h5>
                   </div>
                   <div class="slider-img image-3"></div>
