further responsive changes

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
             <a class="navbar-brand logo" href="https://misfits.co/" title="Go to the homepage"></a>
             <a class="js-scroll-trigger tactical" href="#page-top"> <img style="width:12em; fill-opacity: 0.1" src="./img/tacticalstackinggame.svg"></a>
             <a class="button">Request Invite</a>
-            <button type="button" class="menu-open-trigger" aria-haspopup="true" aria-expanded="false" aria-label="Open top level navigation">M</button>
+            <button type="button" class="menu-open-trigger" aria-haspopup="true" aria-expanded="false" aria-label="Open top level navigation"><img style="width:2em;" src="./img/menuicon.svg"></button>
             <button type="button" class="menu-close-trigger" aria-expanded="true" aria-label="Close top level navigation"><span>Close</span></button>
          </div>
             <div class="menu">
@@ -82,20 +82,14 @@
        <h3>stack and stare</h3>
       <h1 class="hero-title">The next classic <br>stacking game.</h1>
       <span class="visually-hidden contact-verb">Email </span>
-      <span class="hero-subtitle short-content"> Misfits is a fresh evolution to the family of stacking games.<br> No rulebook, no rectangular blocks. Only limitless possibilites.</span>
+      <span class="hero-subtitle short-content">No rulebook, no rectangular blocks. <br>Only limitless possibilites.</span>
 
       </div>
       </div>
       </div>
-      <div class="hero-content">
+      <div class="main-content">
       <div class="content short-content">
-      <p>We set out to see how we could shape up the stacking game, a space that hasn’t seen much change since the ’80s. But it’s not just a rethink of what a stacking game is. Misfits is about challenging the notions of what a board game should be — design-led, simple, inclusive. We have something to say. A game with intent. You don’t need a manual for joy; we tossed out the rulebook and we won’t include one. All you need are your hands.  Limitless possibilities of play. <a href="https://sabbr.com.au/about-us">Learn More</a></p>
-      </div>
-      <div class="calls-to-action">
-      <a class="button" href="https://sabbr.com.au/adoption">I'd like to adopt</a>
-      <a class="button" href="https://sabbr.com.au/foster">I'd like to foster</a>
-      </div>
-      </div>
+      <p>We set out to see how we could shape up the stacking game, a space that hasn’t seen much change since the ’80s. But it’s not just a rethink of what a stacking game is. Misfits is about challenging the notions of what a board game should be — design-led, simple, inclusive. We have something to say. A game with intent. You don’t need a manual for joy; we tossed out the rulebook and we won’t include one. Simple. That's how play should be. <a href="https://sabbr.com.au/about-us">Learn More</a></p>
       </div>
       </main>
        <svg id="page-bg--middle" data-name="page-bg--middle" viewBox="0 0 1230 484" version="1.1">
@@ -138,7 +132,7 @@
                   </li>
                </ul>
             <ul class="legal-details">              
-                  <li class="operating-hours">
+                  <li class="copyright">
                      <span class="meta-heading"> © 2021 aknDesign, LLC</span>
                     </li>  
                  </ul>
