--- a/public/index.html
+++ b/public/index.html
@@ -45,10 +45,9 @@
             <a class="js-scroll-trigger tactical" href="#page-top"> <img style="width:12em; fill-opacity: 0.1" src="./img/tacticalstackinggame.svg"></a>
             <a class="button">Request Invite</a>
             <a  id="OpenNav" class="button menu-open-trigger" aria-haspopup="true" aria-expanded="false" aria-label="Open top level navigation"><img style="width:1.25em;" src="./img/menuicon.svg"></a>
-
             <button id="CloseNav" class="menu-close-trigger" aria-haspopup="true" aria-expanded="false" aria-label="Close top level navigation"><img style="width:1.25em;" src="./img/menuicon.svg"></button>
          </div>
-            <div id="#mainNav" class="menu ">
+            <div id="#mainNav" class="menu transform">
                <ul class="primary-navigation" role="menubar" aria-label="Top level navigation">
                   <li  class="about-us button__rock" role="none">
                      <a data-splitting class="rock" href="#manifesto" role="menuitem">Our Manifesto</a>
