--- a/public/index.html
+++ b/public/index.html
@@ -43,9 +43,9 @@
          <div class="wrapper">
             <a class="navbar-brand logo" href="https://misfits.co/" title="Go to the homepage"></a>
             <a class="js-scroll-trigger tactical" href="#page-top"> <img style="width:12em; fill-opacity: 0.1" src="./img/tacticalstackinggame.svg"></a>
-            <a class="button">Request Invite</a>
+            <a class="invite-button"><p>Request Invite</p></a>
             <a  id="OpenNav" class="button menu-open-trigger" aria-haspopup="true" aria-expanded="false" aria-label="Open top level navigation"><img style="width:1.25em;" src="./img/menuicon.svg"></a>
-            <button id="CloseNav" class="menu-close-trigger" aria-haspopup="true" aria-expanded="false" aria-label="Close top level navigation"><img style="width:1.25em;" src="./img/menuicon.svg"></button>
+            <button id="CloseNav" class="menu-close-trigger" aria-haspopup="true" aria-expanded="false" aria-label="Close top level navigation"><img style="width:1.25em;" src="./img/close.svg"></button>
          </div>
             <div id="#mainNav" class="menu transform">
                <ul class="primary-navigation" role="menubar" aria-label="Top level navigation">
