Commodore Loading Screen
Successfully style and merged the C64 style loading screen

--- a/public/index.html
+++ b/public/index.html
@@ -40,29 +40,22 @@
 
       <script type="text/javascript">
          $(window).on('load', function(){
-        $('#loading-bg').delay(3500).fadeOut(500);
+        $('#loading-bg').delay(5500).slideUp(500);
          });
       </script>
    </head>
       <div id="loading-bg"> 
-      <div class="loading-content">
-        <div class="loading-header">
-          <div class="loader-brand" title="Welcome" alt="Misfits Logo"></div>
-        </div>
-        <div class="loading-text animated animatedFadeInUp fadeInUp"><span class="loader-greeting"></span><br>To be loved and treasured for generations to come</div>
-         <div class="loading-text animated animatedFadeInUp fadeInUp">
-         <svg version="1.1" id="loader-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-            width="40px" height="40px" viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
-            <path fill="#fff" d="M43.935,25.145c0-10.318-8.364-18.683-18.683-18.683c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615c8.072,0,14.615,6.543,14.615,14.615H43.935z">
-               <animateTransform attributeType="xml"
-                  attributeName="transform"
-                  type="rotate"
-                  from="0 25 25"
-                  to="360 25 25"
-                  dur="0.6s"
-                  repeatCount="indefinite"/>
-            </path>
-         </svg>
+      <div class='loading-content'>
+      <h1>**** COMMODORE 64 STARTUP V2 ****<br>
+      64K RAM SYSTEM 38911 BASIC BYTES FREE</h1>
+     <h2>READY.</h2>
+     <h2 class="typed-out">LOAD "MISFITS",8,1</h2>
+     <h2 class="flash">SEARCHING FOR</h2>
+     <h2 class="flash">MISFITS: A TACTICAL STACKING GAME</h2>
+     <h2 class="flash">40 BLOCKS FREE</h2>
+     <h2 class="flash">LEGACY VERSION © JANUARY 1983</h2>
+     <h2 class="flash delay">READY</h2>
+     <h2 class="blinking">RUN &#x2588;</h2>
       </div>
       </div>
       </div>
