--- a/public/index.html
+++ b/public/index.html
@@ -39,27 +39,36 @@
       <script src="index.js"></script>
 
       <script type="text/javascript">
-         $(window).on('load', function(){
-        $('#loading-bg').delay(5500).slideUp(500);
+        $(".loading-bg").ready(function(){
+            setTimeout(function(){
+               $(".loading-bg").attr('id', 'slideup');
+             }, 6500);
          });
       </script>
    </head>
-      <div id="loading-bg"> 
+      <div class="loading-bg"> 
       <div class='loading-content'>
       <h1>**** COMMODORE 64 STARTUP V2 ****<br>
       64K RAM SYSTEM 38911 BASIC BYTES FREE</h1>
-     <h2>READY.</h2>
+     <h2>READY</h2>
      <h2 class="typed-out">LOAD "MISFITS",8,1</h2>
      <h2 class="flash">SEARCHING FOR</h2>
      <h2 class="flash">MISFITS: A TACTICAL STACKING GAME</h2>
-     <h2 class="flash">40 BLOCKS FREE</h2>
      <h2 class="flash">LEGACY VERSION © JANUARY 1983</h2>
+     <h2 class="flash">APPLYING  UPDATE...<span class="loader-greeting flash delay"></h2>
      <h2 class="flash delay">READY</h2>
      <h2 class="blinking">RUN &#x2588;</h2>
       </div>
       </div>
       </div>
    <body class="template-index page-home js-enabled">
+      <div id="myModal" class="modal is-hidden">
+            <div class="modal-content">
+               <span class="close">&times;</span>
+                <p>Some text in the Modal..</p>
+                     </div>
+
+      </div>
       <header class="site-header" >
          <nav class="site-navigation has-menu" id="mainNav">
             <div id="page-top"></div>
@@ -67,26 +76,24 @@
             <a class="navbar-brand logo" href="https://misfits.co/" title="Go to the homepage"></a>
             <a class="js-scroll-trigger tactical" href="#page-top"> <img style="width:12em; fill-opacity: 0.1" src="./img/tacticalstackinggame.svg"></a>
             <a class="invite-button"><p>Request Invite</p></a>
-
-
             <a  id="OpenNav" class="button menu-open-trigger" aria-haspopup="true" aria-expanded="false" aria-label="Open top level navigation"><img style="width:1.25em;" src="./img/menuicon.svg"></a>
             <button id="CloseNav" class="menu-close-trigger" aria-haspopup="true" aria-expanded="false" aria-label="Close top level navigation"><img style="width:1.25em;" src="./img/close.svg"></button>
          </div>
             <div id="#mainNav" class="menu transform">
                <ul class="primary-navigation" role="menubar" aria-label="Top level navigation">
-                  <li  class="about-us menu-item button__rock" role="none">
+                  <li  class="about-us menu-item run-out" role="none">
                      <a data-splitting class="rock" href="#manifesto" role="menuitem">Our Manifesto</a>
                   </li>
-                  <li class="about-us menu-item button__rock" role="none">
+                  <li class="about-us menu-item run-out" role="none">
                      <a data-splitting class="rock" href="#design" role="menuitem" target="_blank">Our Design</a>
                   </li>
-                  <li class="about-us menu-item button__rock" role="none">
+                  <li class="about-us menu-item run-out" role="none">
                      <a data-splitting class="rock" href="#shapes" role="menuitem">The Shapes</a>
                   </li>
-                  <li class="about-us menu-item button__rock" role="none">
+                  <li class="about-us menu-item run-out" role="none">
                      <a data-splitting class="rock" href="#howtoplay" role="menuitem">How to Play</a>
                   </li>
-                  <li class="about-us menu-item button__rock" role="none">
+                  <li class="about-us menu-item run-out" role="none">
                      <a data-splitting class="rock" href="#contact-us" role="menuitem">Contact Us</a>
                   </li>
                </ul>
@@ -115,15 +122,13 @@
   </div>
 </div>
 -->
-
       <section id="main-content" class="main-content">
       <div class="hero-wrapper">
       <img class="hero-image" src="../img/hero/g_Misfits_30082019_Shot_7_403-Recovered@2x.jpg" alt="">
       <div class="textbox">
       <div class="content">
-       <h3>stack and stare</h3>
+       <h3>STACK AND STARE</h3>
       <h1 class="hero-title">The next classic <br>stacking game.</h1>
-      <span class="visually-hidden contact-verb">Email </span>
       <span class="hero-subtitle short-content">No rulebook, no rectangular blocks. <br>Only limitless possibilites.</span>
 
       </div>
@@ -134,8 +139,8 @@
      <svg id="page-bg--middle" data-name="page-bg--middle" viewBox="0 0 1230 484" version="1.1">
             <title>Manifesto Styling</title>
             <defs></defs>
-            <g id="Post-Festival-Homepage" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-               <g transform="translate(0.000000, -1717.000000)" id="BG-Shapes" fill="#ee531c">
+            <g id="manifesto-edge" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+               <g transform="translate(0.000000, -1717.000000)" id="BG-Shapes" fill="#b8860b">
                   <g transform="translate(-210.000000, 0.000000)">
                      <polygon id="Yellow-Scrap-Copy" transform="translate(720.000000, 1958.996094) rotate(180.000000) translate(-720.000000, -1958.996094) " points="-3.41060513e-12 1842.99219 6.82121026e-13 1717 1440 1717 1408.04343 1945.60521 1045.29818 1889.25481 684.27907 1859.9568 364 1802.99219 310 1800.99219 170 1806.99219"></polygon>
                   </g>
@@ -179,7 +184,7 @@
                </ul>
             <ul class="legal-details">              
                   <li class="copyright">
-                     <span class="meta-heading"> © 2021 aknDesign, LLC</span>
+                     <span class="meta-heading"> © <span class="year"></span> aknDesign, LLC</span>
                     </li>  
                  </ul>
                   
