FIXED THE FOOTER
was a forgotten {

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
          });
       </script>
    </head>
-      <div class="loading-bg"> 
+      <!--<div class="loading-bg"> 
       <div class='loading-content'>
       <h1>**** COMMODORE 64 STARTUP V2 ****<br>
       64K RAM SYSTEM 38911 BASIC BYTES FREE</h1>
@@ -60,12 +60,12 @@
      <h2 class="blinking">RUN &#x2588;</h2>
       </div>
       </div>
-      </div>
+      </div>-->
    <body class="template-index page-home js-enabled">
       <div id="myModal" class="modal is-hidden">
             <div class="modal-content">
                <span class="close">&times;</span>
-                <p>Some text in the Modal..</p>
+                <p>How</p>
                      </div>
 
       </div>
